--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
+  "homepage": "https://yogyy.github.io/react-todo-localhost",
   "name": "react-todo",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
@@ -17,6 +20,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "gh-pages": "^4.0.0",
     "vite": "^4.0.0"
   }
 }
