--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://yogyy.github.io/react-todo-localhost",
+  "homepage": "http://yogyy.github.io/react-todo-localhost/",
   "name": "react-todo",
   "private": true,
   "version": "0.0.0",
