--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "dependencies": {
     "@heroicons/react": "^2.0.13",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-particles": "^2.8.0",
+    "react-tsparticles": "^2.8.0",
+    "tsparticles-slim": "^2.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
